infra/k8s/overlays/development/patches/bills-payment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bills-payment
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: bills-payment
          resources:
            requests:
              cpu: '100m'
              memory: '128Mi'
            limits:
              cpu: '500m'
              memory: '512Mi'
